style: fix layout issue when `no-sidebar` is enabled (#753)

--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -74,3 +74,7 @@ html[data-theme='dark'] #kapa-widget-portal {
     border-color: #eee;
   }
 }
+
+.vp-toc-placeholder {
+  width: 100%;
+}
